--- a/index.html
+++ b/index.html
@@ -6,5 +6,98 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Laboratorio HTML y CSS</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<button>
+				<img src="assets/img/icon-menu-burguer.svg" class="icono" alt="Menú" title="Menú" />
+			</button>
+			<nav>
+				<a href="#">MODA MUJER</a>
+				<a href="#">MODA HOMBRE</a>
+				<a href="#">NUEVA COLECCIÓN</a>
+				<a href="#">COLECCIONES ESPECIALES</a>
+			</nav>
+			<div class="secUsuario">
+				<button class="icono">
+					<img src="assets/img/icon-user.svg" alt="Usuario" />
+				</button>
+				<button class="icono">
+					<img src="assets/img/icon-heart.svg" alt="Favoritos" />
+				</button>
+				<button class="icono">
+					<img src="assets/img/icon-shopping-cart.svg" alt="Carrito" />
+				</button>
+			</div>
+		</header>
+
+		<main>
+			<h1>NUEVAS COLECCIONES</h1>
+			<div class="gridProductos">
+				<article class="card">
+					<img src="assets/img/image-3.jpg" class="imgBox" alt="" />
+					<div class="datosProductos">
+						<p class="nProducto">Vestido</p>
+						<p class="precio">34.99€</p>
+					</div>
+				</article>
+				<article class="card">
+					<img src="assets/img/image-6.jpg" class="imgBox" alt="" />
+					<div class="datosProductos">
+						<p class="nProducto">Camisa</p>
+						<p class="precio">44.99€</p>
+					</div>
+				</article>
+				<article class="card">
+					<img src="assets/img/image-4.jpg" class="imgBox" alt="" />
+					<div class="datosProductos">
+						<p class="nProducto">Vaqueros</p>
+						<p class="precio">79.99€</p>
+					</div>
+				</article>
+				<article class="card">
+					<img src="assets/img/image-5.jpg" class="imgBox" alt="" />
+					<div class="datosProductos">
+						<p class="nProducto">Polo</p>
+						<p class="precio">44.95€</p>
+					</div>
+				</article>
+				<article class="card">
+					<img src="assets/img/image-1.jpg" class="imgBox" alt="" />
+					<div class="datosProductos">
+						<p class="nProducto">Camisa</p>
+						<p class="precio">25.00€</p>
+					</div>
+				</article>
+				<article class="card">
+					<img src="assets/img/image-2.jpg" class="imgBox" alt="" />
+					<div class="datosProductos">
+						<p class="nProducto">Camiseta</p>
+						<p class="precio">22.99€</p>
+					</div>
+				</article>
+			</div>
+		</main>
+
+		<footer>
+			<a href="#">
+				<div class="icono">
+					<img src="assets/img/icon-truck.svg" alt="Entrega" />
+				</div>
+				<p>Entrega</p>
+			</a>
+			<a href="#"><p>Devoluciones y cambios</p></a>
+			<a href="tel:+375 (29) 749-18-23">
+				<div class="icono">
+					<img src="assets/img/icon-phone.svg" alt="Teléfono" />
+				</div>
+				<p>+375 (29) 749-18-23</p>
+			</a>
+			<a href="mailto:shop@omix.com">
+				<div class="icono">
+					<img src="assets/img/icon-mail.svg" alt="Correo" />
+				</div>
+				<p>shop@omix.com</p>
+			</a>
+		</footer>
+	</body>
 </html>
